dev/ingress/fake58-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake58-ingress
  namespace: fake58-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake58.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake58-service
                port:
                  number: 20058
